tests/fail/test_optional_optional_writing.nim
import options

import ../../protobuf_serialization

discard writeValue(Option[Option[int]]())
